# space_commander_game

./: Cargo.toml  README.md  build.rs  icon.rc
.cargo/: config.toml
.github/workflows/: release.yml  release_manual.yml
src/: main.rs  sound.rs  ui.rs
src/enemy/: enemy_difficulty.rs  enemy_spawner.rs  mod.rs
src/game_systems/: mod.rs
src/helpers/: mod.rs
src/player/: input.rs  mod.rs  player_missiles.rs  scanner.rs  shield.rs
src/player/input/: input_manager.rs
src/player/player_missiles/: player_missile_core.rs
src/player/scanner/: scanner_core.rs
src/player/shield/: shield_core.rs
wasm/: index.html
