[package]
name = "space_commander_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }
bevy_egui = "0.16.1"
bevy_kira_audio = "0.12.0"
bevy_rapier2d = "0.17.0"
iyes_loopless = "0.7.1"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
wasm-server-runner = "0.3.0"
