[package]
name = "space_commander_game"
version = "0.1.0"
edition = "2021"
authors = ["Noah Shomette <https://github.com/NoahShomette>"]

[profile.release]
opt-level = 'z'
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "wav",
    "x11",
    "filesystem_watcher", ] }
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }
bevy_egui = "0.16.1"
bevy_kira_audio = { version = "0.12.0", features = ["wav", "mp3"] }
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = "0.17.0"
iyes_loopless = "0.7.1"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
bevy-web-resizer = "3.0"

